--- a/client/src/styles/EachBook.scss
+++ b/client/src/styles/EachBook.scss
@@ -1,5 +1,13 @@
 .each-book {
+    width: 20%;
+
    img {
-       width: 60%;
+       width: 200px;
+       height: 300px;
+   };
+
+   .title {
+    font-weight: bold;
+    font-size: 16px;
    }
 }
