--- a/client/src/styles/EachBook.scss
+++ b/client/src/styles/EachBook.scss
@@ -8,6 +8,16 @@
 
    .title {
     font-weight: bold;
-    font-size: 16px;
+    font-size: 17px;
+   }
+
+   .author {
+    font-size: 13px;
+    color: darkgoldenrod;
+   }
+
+   .date {
+    font-size: 12px;
+    color: #696362;
    }
 }
